--- a/index.html
+++ b/index.html
@@ -9,11 +9,14 @@
 <body>
     <div class="container">
         <div class="insert">
-            <h1 class="login">Login</h1>
-            <h2 class="username">Username</h2>
-            <input type="email" name="email" id="email" placeholder="E-mail" required>
+            <div class="login">
+                <h1>Login</h1>
+            </div>
+            <h2 class="username">E-mail</h2>
+            <input type="email" name="email" id="email" placeholder="example@email.com" required>
             <h2 class="senha">Password</h2>
-            <input type="password" name="password" id="password" placeholder="Senha" required>
+            <input type="password" name="password" id="password" placeholder="Password" required >
+            <button type="submit" class="enter">Login</button>
         </div>
     </div>
 </body>
