using labels instead of h2

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
             <div class="login">
                 <h1>Login</h1>
             </div>
-            <h2 class="username">E-mail</h2>
+            <label class="username" for="email">E-mail</label>
             <input type="email" name="email" id="email" placeholder="example@email.com" required>
-            <h2 class="senha">Password</h2>
-            <input type="password" name="password" id="password" placeholder="Password" required >
+            <label class="senha" for="password">Password</label>
+            <input type="password" name="password" id="password" placeholder="Insert your password" required >
             <button type="submit" class="enter">Login</button>
         </div>
     </div>
